--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -1,6 +1,7 @@
 <section
   role="feed"
   class="row"
+  [attr.aria-labelledby]="ariaLabelId()"
   [attr.aria-busy]="isLoading()"
   (keydown.ArrowDown)="focusNextArticle($event)"
   (keydown.ArrowUp)="focusPriorArticle($event)"
