--- a/src/app/design/templates/home/home.component.scss
+++ b/src/app/design/templates/home/home.component.scss
@@ -12,6 +12,7 @@
 
   &__search-bar {
     width: 100%;
+    margin-bottom: var(--spacer-4);
   }
 
   &__feed {
@@ -73,20 +74,10 @@
 
   &__controls {
     display: flex;
-    flex-direction: column;
-    align-items: end;
-    margin-bottom: var(--spacer-3);
-
-    @include media-breakpoint-up(md) {
-      flex-direction: column;
-    }
-  }
-
-  &__select {
-    margin-bottom: var(--spacer-3);
-  }
-
-  &__mode-switch {
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: var(--spacer-3);
     margin-bottom: var(--spacer-3);
   }
 }
