--- a/src/app/design/templates/character/character.component.html
+++ b/src/app/design/templates/character/character.component.html
@@ -138,6 +138,7 @@
 
     <div class="character__items">
       <app-list
+        [ariaLevel]="2"
         [heading]="'Items of Note'"
         [entries]="characterItems()"
         [enableCreate]="canCreate()"
