--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -25,6 +25,7 @@
         (showScrollupIndicator$ | async) === true
       "
       (click)="scrollToTop()"
+      title="Scroll to top"
       aria-label="Scroll to top"
       [hotkey]="'t'"
       (hotkeyPressed)="scrollToTop()"
