Move stuff into context menu

--- a/src/app/design/atoms/button/button.component.html
+++ b/src/app/design/atoms/button/button.component.html
@@ -4,8 +4,11 @@
 }
 
 @if (text()) {
-  <span class="btn__text" [class.btn__text--large]="size() === 'LARGE'">
-    {{ text() }}
+  <span
+    class="btn__text"
+    [class.btn__text--large]="size() === 'LARGE'"
+    [innerHTML]="text()"
+  >
   </span>
 }
 
