--- a/src/app/molecules/context-menu/context-menu.component.html
+++ b/src/app/molecules/context-menu/context-menu.component.html
@@ -18,7 +18,7 @@
   ></button>
   <ul
     ngbDropdownMenu
-    class="dropdown-menu dropdown-menu-end"
+    class="dropdown-menu dropdown-menu-end p-0"
     role="menu"
     [id]="menuId"
     [attr.aria-labelledby]="triggerId"
