--- a/src/app/design/templates/map/map.component.scss
+++ b/src/app/design/templates/map/map.component.scss
@@ -34,6 +34,7 @@
   &__select {
     margin-left: var(--spacer-3);
     font-weight: bold;
-    font-size: 20px;
+    --menu-text-size: 24px;
+    --menu-option-text-size: 20px;
   }
 }
