--- a/src/app/molecules/context-menu/context-menu.component.html
+++ b/src/app/molecules/context-menu/context-menu.component.html
@@ -10,7 +10,7 @@
     [icon]="menuButtonIcon()"
     [size]="menuButtonSize()"
     [hotkey]="menuButtonHotkey()"
-    [title]="menuButtonTitle()"
+    [attr.title]="menuButtonTitle()"
     aria-haspopup="menu"
     [attr.aria-controls]="menuId"
     [attr.aria-label]="menuButtonAriaLabel()"
