Improve context menu spacing

--- a/src/app/molecules/context-menu/context-menu.component.scss
+++ b/src/app/molecules/context-menu/context-menu.component.scss
@@ -11,3 +11,7 @@
 .dropdown-item {
   font-size: var(--menu-option-text-size);
 }
+
+.dropdown-menu {
+  --bs-dropdown-item-padding-y: var(--spacer-2);
+}
