--- a/src/app/design/organisms/image-grid/image-grid.component.html
+++ b/src/app/design/organisms/image-grid/image-grid.component.html
@@ -1,36 +1,40 @@
 <div class="container-fluid">
   @if (entries() != null) {
     @if (entries().length > 0) {
-      <div class="row image-grid">
+      <ul class="row image-grid">
         @for (entry of entries(); track $index) {
-          <a
-            class="image-grid__entry entry"
-            [style.background-image]="
-              'url(' + serverUrl() + entry.imageUrl + ')'
-            "
-            [routerLink]="entry.link"
+          <li
+            class="image-grid__container"
             [ngClass]="{
               'col-lg-12': columnCount() === 1,
               'col-sm-6': columnCount() === 2,
               'col-md-6 col-lg-4': columnCount() === 3,
             }"
-            [attr.aria-label]="entry.label"
           >
-            <div class="entry__overlay">
-              <div class="fs-4 entry__heading heading">
-                @if (entry.icon) {
-                  <img
-                    class="heading__icon"
-                    [src]="serverUrl() + entry.icon"
-                    [alt]="''"
-                  />
-                }
-                {{ entry.label }}
+            <a
+              class="image-grid__entry entry"
+              [style.background-image]="
+                'url(' + serverUrl() + entry.imageUrl + ')'
+              "
+              [routerLink]="entry.link"
+              [attr.aria-label]="entry.label"
+            >
+              <div class="entry__overlay">
+                <div class="fs-4 entry__heading heading">
+                  @if (entry.icon) {
+                    <img
+                      class="heading__icon"
+                      [src]="serverUrl() + entry.icon"
+                      [alt]="''"
+                    />
+                  }
+                  {{ entry.label }}
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </li>
         }
-      </div>
+      </ul>
     } @else {
       <ng-container *ngTemplateOutlet="noEntries" />
     }
