--- a/src/app/design/organisms/image-grid/image-grid.component.scss
+++ b/src/app/design/organisms/image-grid/image-grid.component.scss
@@ -8,6 +8,11 @@
 
 .image-grid {
   height: 100%;
+  padding-left: 0;
+
+  &__container {
+    padding: 0;
+  }
 
   &__entry {
     cursor: pointer;
@@ -22,6 +27,9 @@
   background-size: cover;
   background-position: center;
   min-height: 30vh;
+  width: 100%;
+  height: 100%;
+  padding: 0;
 
   opacity: 0.75;
   transition: opacity 0.2s ease-in-out;
