--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,18 +2,17 @@
   background-color: var(--bs-primary);
   text-align: center;
   width: 100vw;
-  padding: var(--spacer-3);
+  padding: var(--spacer-2);
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0px;
   text-decoration: none;
   transform: translateY(-1000%);
 
   &:focus-visible {
-    position: unset;
+    position: relative;
     transform: unset;
-    color: unset;
+    z-index: 1;
   }
 }
