Make collapsible panel button cover the entire header

--- a/src/app/design/molecules/collapsible-panel/collapsible-panel.component.html
+++ b/src/app/design/molecules/collapsible-panel/collapsible-panel.component.html
@@ -28,7 +28,7 @@
     [id]="contentId"
     [attr.aria-labelledby]="triggerId"
   >
-    <app-separator></app-separator>
+    <app-separator class="card__separator"></app-separator>
     <ng-content select="[body]"></ng-content>
   </div>
 </section>
