--- a/src/app/design/templates/login/login.component.html
+++ b/src/app/design/templates/login/login.component.html
@@ -1,14 +1,15 @@
 <div
   class="login"
   [@backInUp]
-  [@flipInY]="state === 'LOGIN' ? 'sideA' : 'sideB'"
+  [@flipInY]="state() === 'LOGIN' ? 'sideA' : 'sideB'"
 >
   <app-page-container>
-    @if (state === "LOGIN") {
+    @if (state() === "LOGIN") {
       <h1>Sign In</h1>
-      @if (loginState) {
+      @let loginStateVal = loginState();
+      @if (loginStateVal) {
         <div class="login__subtitle-warning">
-          {{ loginMessages[loginState] }}
+          {{ loginMessages[loginStateVal] }}
         </div>
       }
       <form class="login__form" (submit)="onLogin()">
@@ -35,7 +36,7 @@
         you a randomized new password to your email address.
       </p>
       <div class="login__subtitle-warning">
-        {{ resetErrorMessage }}
+        {{ resetErrorMessage() }}
       </div>
       <form class="login__form" (submit)="onPasswordReset()">
         <formly-form
