--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -6,18 +6,27 @@
     [hotkey]="'f'"
     (hotkeyPressed)="filterInputElement.focus()"
   >
-    <label class="cdk-visually-hidden" for="search-input">
-      {{ heading() }} name
+    <label class="fs-5 fw-bold p-0" [for]="searchId">
+      {{ heading() | titlecase }} name search
     </label>
-    <input
-      id="search-input"
-      class="filter__input"
-      type="text"
-      placeholder="Search for {{ heading() }} ..."
-      #filterInputElement
-      (keyDown)="filterValue.set(filterInputElement.value)"
-      (input)="filterValue.set(filterInputElement.value)"
-    />
+    <div class="filter__input-container">
+      <input
+        [id]="searchId"
+        class="filter__input"
+        type="text"
+        #filterInputElement
+        [attr.aria-controls]="listId"
+        (keyDown)="filterValue.set(filterInputElement.value)"
+        (input)="filterValue.set(filterInputElement.value)"
+      />
+      <button
+        btn
+        class="filter__button"
+        [kind]="'SECONDARY'"
+        [icon]="'search'"
+        [type]="'submit'"
+      ></button>
+    </div>
   </form>
 
   <section>
@@ -29,6 +38,7 @@
 
 <ng-template #letterList>
   <ul
+    [id]="listId"
     class="row"
     [attr.aria-label]="
       'All recorded ' + heading() + ', split into lists by first letter'
@@ -73,7 +83,13 @@
 </ng-template>
 
 <ng-template #propertyList>
-  <ul class="row">
+  <ul
+    class="row"
+    [id]="listId"
+    [attr.aria-label]="
+      'All ' + heading() + 'entries matching ' + filterInputElement.value
+    "
+  >
     @let groupPropVal = groupProp();
     @if (groupPropVal) {
       @for (
