--- a/src/app/design/organisms/image-grid/image-grid.component.html
+++ b/src/app/design/organisms/image-grid/image-grid.component.html
@@ -17,7 +17,7 @@
                 'url(' + serverUrl() + entry.imageUrl + ')'
               "
               [routerLink]="entry.link"
-              [attr.aria-label]="entry.label"
+              [attr.aria-label]="entry.ariaLabel"
             >
               <div class="entry__overlay">
                 <div class="fs-4 entry__heading heading">
