--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -1,7 +1,7 @@
 <div class="container list" [class.list--loading]="isUpdatingGlobally()">
   @if (!isUpdatingGlobally()) {
     <!-- Diaryentry - Encounters -->
-    <ul class="list__inner p-0">
+    <ul class="list__inner p-0" aria-label="Diaryentry Encounters">
       @if (state() === "EDIT" && (canCreate() || canUpdate())) {
         @if (canCreate()) {
           <div class="list__button-container">
@@ -44,7 +44,7 @@
           [updateState]="entryEncounter.requestState"
           [state]="state()"
           [isInFocus]="encounterIndexInFocus() === $index"
-          [ariaLevel]="3"
+          [ariaLevel]="2"
           (connectionDelete)="connectionDelete.emit($event)"
           (connectionCreate)="connectionCreate.emit($event)"
           (encounterDelete)="onEncounterDelete($index)"
