--- a/src/app/design/organisms/encounter-card/encounter-card.component.scss
+++ b/src/app/design/organisms/encounter-card/encounter-card.component.scss
@@ -3,6 +3,7 @@
 .repeated-unit {
   padding: 0;
   scroll-margin-top: var(--spacer-5);
+  border-radius: var(--bs-border-radius);
 
   @include media-breakpoint-up(md) {
     padding: unset;
