--- a/src/app/design/organisms/encounter/encounter.component.scss
+++ b/src/app/design/organisms/encounter/encounter.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: var(--spacer-2);
   }
 
   &__text {
