--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -103,6 +103,7 @@
           class="nav-buttons__button nav-buttons__button--left"
           [routerLink]="nextDiaryentryUrl()"
           [text]="'Next'"
+          aria-label="To Next Diaryentry"
           [icon]="'arrow-left'"
           [kind]="'SECONDARY'"
         >
@@ -118,6 +119,7 @@
           class="nav-buttons__button nav-buttons__button--right"
           [routerLink]="priorDiaryentryUrl()"
           [text]="'Back'"
+          aria-label="To Prior Diaryentry"
           [icon]="'arrow-right'"
           [kind]="'SECONDARY'"
         >
