--- a/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.scss
+++ b/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.scss
@@ -9,9 +9,11 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  padding-bottom: 0;
 }
 
 .modal-body {
-  max-width: 600px;
+  max-width: 700px;
   width: 100%;
+  overflow: hidden;
 }
