--- a/src/app/global-components/onboarding/onboarding-stepper/onboarding-stepper.component.html
+++ b/src/app/global-components/onboarding/onboarding-stepper/onboarding-stepper.component.html
@@ -3,27 +3,291 @@
   (selectionChange)="selectionChange.emit($event.selectedStep)"
 >
   <cdk-step #firstStep [label]="'Welcome to Aldrune!'">
-    <p>
-      This is a small guide to explain the intent and functionality of the
-      various features of Aldrune.
-    </p>
-    <p>
-      You can close this window at any time. You can look at this help again by
-      pressing the hotkey "Alt + O"
-    </p>
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          class="stepper__image"
+          [src]="'/assets/onboarding/home.webp'"
+          alt=""
+        />
+        <figcaption>
+          Fig 1. Edit Button for metadata in a creature article
+        </figcaption>
+      </figure>
+      <p>
+        Welcome to Aldrune, your new tool for managing your Tabletop RPG
+        campaigns. This guide will walk you through how to use the app.
+      </p>
+      <p>
+        Press <strong>Alt + O</strong> if you want to look at it again later.
+        Now let's get started!
+      </p>
+    </div>
   </cdk-step>
-  <cdk-step [label]="'Articles'"> GENERAL ARTICLES </cdk-step>
-  <cdk-step [label]="'Sessions'"> SESSIONS </cdk-step>
-  <cdk-step [label]="'Diaryentries & Encounters'"> DIARYENTRY </cdk-step>
-  <cdk-step [label]="'Recordings'"> RECORDING </cdk-step>
-  <cdk-step [label]="'Maps'"> MAP </cdk-step>
-  <cdk-step [label]="'Campaign Configuration'"> WIKI-CONFIGURATION </cdk-step>
-  @if (isCampaignAdmin()) {
-    <cdk-step [label]="'Administering your Campaign'">
-      CAMPAIGN-ADMIN
+  <cdk-step [label]="'Write Articles!'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          class="stepper__image"
+          [src]="'/assets/onboarding/articles_edit.webp'"
+          alt=""
+        />
+        <figcaption>
+          Fig 2. Edit Button for metadata in a creature article
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          class="stepper__image"
+          [src]="'/assets/onboarding/description_edit.webp'"
+          alt=""
+        />
+        <figcaption>
+          Fig 3. Edit button for the content of a creature article
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          class="stepper__image"
+          [src]="'/assets/onboarding/articles_delete.webp'"
+          alt=""
+        />
+        <figcaption>Fig 4. Delete button in a creature article</figcaption>
+      </figure>
+      <figure>
+        <img
+          class="stepper__image"
+          src="/assets/onboarding/articles_create.webp"
+          alt=""
+        />
+        <figcaption>Fig 5. Create button for creature articles</figcaption>
+      </figure>
+      <p>
+        You can create short articles about various aspects of your campaign,
+        such as characters, monsters, locations, items, organizations, and
+        quests.
+      </p>
+      <p>If you have the necessary permissions, you can:</p>
+      <ul>
+        <li>
+          Edit the article's text by clicking the text or using the "Edit Text"
+          button.
+        </li>
+        <li>
+          Edit the meta-data, like name of a creature or title of a character,
+          by clicking the "Edit" button in the top-right corner.
+        </li>
+        <li>
+          Delete articles if you have permission (button at the bottom-right).
+        </li>
+      </ul>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Manage Your Sessions'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          src="/assets/onboarding/sessions.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>Fig 6. Link to Sessions page</figcaption>
+      </figure>
+
+      <p>You can record individual sessions in the Sessions section.</p>
+      <p>
+        For each session, you can write a "Diaryentry" with detailed notes. Each
+        campaign member can write one diaryentry per session. To write a
+        diaryentry, the session must first be added.
+      </p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Diaryentries & Encounters'">
+    <div role="slide" aria-roledescription="slide">
+      <div class="d-flex flex-row">
+        <figure class="h-100">
+          <img
+            src="/assets/onboarding/diaryentry_menu.webp"
+            alt=""
+            class="stepper__image"
+          />
+          <figcaption>Fig 7. Diaryentry edit menu</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/assets/onboarding/diaryentry_edit.webp"
+            alt=""
+            class="stepper__image"
+          />
+          <figcaption>Fig 8. Encounter edit view in diaryentries</figcaption>
+        </figure>
+      </div>
+
+      <p>
+        A diaryentry is a list of individual scenes or "encounters" from your
+        campaign.
+      </p>
+      <p>
+        After adding a diaryentry, you can start adding encounters by clicking
+        "Edit Encounters" in the edit menu at the top-right corner of the
+        diaryentry.
+      </p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Record the Moments'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          src="/assets/onboarding/recordings.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>Fig 9. Overview over recordings</figcaption>
+      </figure>
+      <figure>
+        <img
+          src="/assets/onboarding/audio_player.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>Fig 10. Playing an audio file</figcaption>
+      </figure>
+      <p>
+        Upload recordings of your tabletop adventures and relive every moment!
+        You can stream or download them anytime.
+      </p>
+      <p>Want to highlight key moments? Add timestamps while listening!</p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Map your world'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img src="/assets/onboarding/map.webp" alt="" class="stepper__image" />
+        <figcaption>
+          Fig 11. Campaign map with various marked locations
+        </figcaption>
+      </figure>
+      <p>
+        Upload a campaign map and mark important locations on it to keep track
+        of your journey.
+      </p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Make it yours'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          src="/assets/onboarding/configuration.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>
+          Fig 12. Campaign configuration with various custom types of
+          relationship between articles
+        </figcaption>
+      </figure>
+      <p>
+        Customize your wiki with meta-entries like unique map markers and
+        relationship types.
+      </p>
+      <p>
+        Head over to the wiki-configuration page to tweak things just the way
+        you like!
+      </p>
+    </div>
+  </cdk-step>
+  @if (isCampaignAdmin() || true) {
+    <cdk-step [label]="'Shape your Campaign'">
+      <div role="slide" aria-roledescription="slide">
+        <figure>
+          <img
+            src="/assets/onboarding/admin.webp"
+            alt=""
+            class="stepper__image"
+          />
+          <figcaption>
+            Fig 13. Campaign admin page with current settings and configured
+            campaign members and their roles
+          </figcaption>
+        </figure>
+        <p>
+          In the campaign admin section, you’re in control! Manage the campaign
+          settings and make it truly yours.
+        </p>
+        <ul>
+          <li>Set a cool campaign icon</li>
+          <li>Choose an epic background image</li>
+          <li>Add or remove guests, members, or admins</li>
+          <li>Set the default map shown when opening the map section</li>
+          <li>... and more !</li>
+        </ul>
+      </div>
     </cdk-step>
   }
-  <cdk-step [label]="'Hotkeys'"> HOTKEYS </cdk-step>
-  <cdk-step [label]="'Error handling'"> ERRORS </cdk-step>
-  <cdk-step [label]="'Have Fun'"> DONE - HAVE FUN </cdk-step>
+  <cdk-step [label]="'Speed it up with Hotkeys'">
+    <div role="slide" aria-roledescription="slide">
+      <figure>
+        <img
+          src="/assets/onboarding/hotkeys.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>
+          Fig 14. Hotkey tooltips show up as you hold down "Alt"
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          src="/assets/onboarding/hotkey_modal.webp"
+          alt=""
+          class="stepper__image"
+        />
+        <figcaption>
+          Fig 15. Alt + H shows an overview over hotkey actions
+        </figcaption>
+      </figure>
+      <p>
+        Save time with handy hotkeys! Just hold <strong>Alt</strong> to see
+        which buttons or other elements on the screen react to a hotkey. Press
+        "Alt" + the key to perform the action!
+      </p>
+      <p>
+        Need a cheat sheet? Press <strong>Alt + H</strong> to see all available
+        shortcuts.
+      </p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Help make it better!'">
+    <div role="slide" aria-roledescription="slide">
+      <p>Oops! Something not working right? Let us know!</p>
+      <p>
+        You can report issues directly to the developer or file a bug report on
+        GitHub:
+      </p>
+      <p>
+        <a
+          href="https://github.com/PhilippMDoerner/nimstoryfont-gui/issues"
+          target="_blank"
+        >
+          GitHub Issue Tracker
+          <app-icon [icon]="'up-right-from-square'"></app-icon>
+        </a>
+      </p>
+    </div>
+  </cdk-step>
+  <cdk-step [label]="'Adventure Awaits!'">
+    <div role="slide" aria-roledescription="slide">
+      <div class="d-flex justify-content-center mb-3">
+        <app-success-animation
+          class="stepper__done"
+          (animationend)="$event.stopPropagation()"
+        />
+      </div>
+      <p>
+        You're ready to dive into your campaign and start creating an amazing
+        world!
+      </p>
+      <p>Explore, create, and collaborate with your group. Have fun!</p>
+    </div>
+  </cdk-step>
 </app-stepper>
