Add finish button

--- a/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.html
+++ b/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.html
@@ -16,4 +16,5 @@
   class="modal-body"
   [isCampaignAdmin]="isCampaignAdmin() ?? false"
   (selectionChange)="activeStepElement.set($event)"
+  (finished)="dismiss()"
 ></app-onboarding-stepper>
